Changed XML layout from ConstraintLayout to RelativeLayout and fixed String Warnings on the text fields. Have the Buttons and TextBoxes in the right place.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">300CEM Assignment</string>
     <string name="action_settings">Settings</string>
+    <string name="register">Register</string>
+    <string name="login">Login</string>
+    <string name="please_login_to_continue">Please Login to Continue</string>
+    <string name="password">Password:</string>
+    <string name="username">Username:</string>
 </resources>
