--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,11 @@
 <resources>
-    <string name="app_name">300CEM Assignment</string>
+    <string name="app_name">Login Page</string>
     <string name="action_settings">Settings</string>
     <string name="register">Register</string>
     <string name="login">Login</string>
     <string name="please_login_to_continue">Please Login to Continue</string>
     <string name="password">Password:</string>
     <string name="username">Username:</string>
+    <string name="take_a_picture">Take a picture</string>
+    <string name="title_activity_signup">signup</string>
 </resources>
